# newsletter-writer

./: .gitignore  README.md  main.py  main_original.py  main_unworking.py  main_working.py  main_working_html.py  prompt.txt  prompt1.txt  pyproject.toml  readme.md  replit.nix  requirements.txt  rewritten_newsletter.txt
alt/: acc-coach.py  datanal.py
